# UV Standardized structure
[project]
name = "sshclick"
# version = "0.8.0"   # Move to dynamic
dynamic = ["version"]
description = "SSH terminal config manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Karlo Tisaj", email = "karlot@gmail.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
    "textual>=8.2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://github.com/karlot/sshclick"

[project.scripts]
sshc = "sshclick.main_cli:cli"
ssht = "sshclick.main_tui:tui"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest]
addopts = ["-ra", "-q"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["sshclick"]
